public enum Cursus {
    E1, E2, E3e, E3a, E4, E5
}
